--- a/src/Components/Catalogue/Catalogue.css
+++ b/src/Components/Catalogue/Catalogue.css
@@ -2,8 +2,8 @@
 
 .catalog {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 6rem;
     padding: 1rem;
     margin-top: 100px;
   }
@@ -25,7 +25,7 @@
   
   .product-card img {
     width: 100%;
-    height: auto;
+    height: 300px;
     border-bottom: 1px solid #ddd;
     margin-bottom: 1rem;
   }
